﻿更新履歴

==== Ver 2.5.1-dev(2022/xx/xx)
 * NEW: RTしたユーザーのプロフィール・タイムラインを表示する機能をメニューに追加 (thx @kzlogos!)
 * NEW: 発言詳細欄の名前やアイコンのクリックによるプロフィール表示に対応
 * NEW: クリップボード経由での複数枚の画像ファイル添付に対応
 * NEW: 画面上に表示する解像度に応じたプロフィール画像の取得に対応
   - 高DPI環境で表示した場合により高解像度のプロフィール画像が取得されるようになります
   - リストのアイコンサイズを none に設定した場合、発言が選択されるまでプロフィール画像のダウンロードを行わなくなります
 * NEW: 発言のダブルクリック時の動作に「Reply All」(@返信ALL)を追加
 * NEW: 関連発言表示で会話ツリーの最新の発言を取得する機能を追加
 * CHG: ツイートの投稿者とRTしたユーザーに関するメニュー項目を整理
 * CHG: DMが選択されている時は「@返信」「@返信ALL」のどちらも「DM送信」と同じ動作となるように変更
 * CHG: 複数のユーザー宛のリプライ時にツイートの先頭にピリオドを加える仕様を廃止
 * CHG: 発言一覧上でEnterキーを押した時の動作をダブルクリック時と同じとなるように変更
 * CHG: 初回起動時のウィンドウサイズなどの初期値を変更
 * FIX: 「Twitter API稼働状況」のリンク先を修正 (thx @kzlogos!)
 * FIX: 起動時に読み込まれた検索・リストタブでフォロー状態を表す色が反映されない不具合を修正 (thx @Hawklaver!)
 * FIX: 等幅フォント表示を有効にした場合に背景色の設定が全面に適用されない不具合を修正 (thx @StoutAmmo!)
 * FIX: 起動直後の時点で発言詳細欄の背景色設定が適用されていない不具合を修正
 * FIX: 自分のツイートに対する「@返信ALL」で自分宛のMentionが付かない不具合を修正 (thx @doug_lee42!)
 * FIX: 関連発言表示によって内部の未読状態と未読表示が一致しない状態になる不具合を修正 (thx @wal_san!)
 * FIX: Webブラウザ起動時にエラーが発生した場合に正しくエラーメッセージが表示されない不具合を修正

==== Ver 2.5.0(2022/02/05)
 * NEW: アカウント追加時の認可URLを右クリックでコピー可能にしました
 * NEW: Twemoji 13.1 に対応しました
  - Unicode 13.0 で追加された絵文字が表示されるようになります
 * CHG: pic.twitter.com の画像URLのフォーマット変更に対応
 * CHG: Instagramのサムネイルを表示するURLのパターンを追加
 * CHG: YouTubeのサムネイルを表示するURLのパターンを追加 (thx @Hawklaver!)
 * CHG: UserStreams関係の機能を削除
 * CHG: 設定画面にある通知関係の項目の配置を移動
 * CHG: タブ別の新着通知表示のデフォルト設定を変更
   * Reply, DM タブ以外は新着通知表示がデフォルトでオフになります（従来はタブの種別に関わらずデフォルトでオン）
 * CHG: 「Listの発言取得に公式RTを含める」のデフォルト設定をオンに変更
 * CHG: POSTキーのデフォルト設定を Ctrl+Enter に変更
 * FIX: DMの添付画像をブラウザで開く場合に使用するURLを変更
 * FIX: 大文字アルファベットを含むハッシュタグがユーザー情報画面で正しくリンク化されない不具合を修正 (thx @naminodarie!)
 * FIX: 初回起動時の設定画面でブラウザパスを入力しても認可URLを開く際に適用されない不具合を修正
 * FIX: URL自動短縮の設定値が正しく表示されない不具合を修正
 * FIX: 関連発言表示で一部のツイートの読み込みがエラーになると関連発言タブに何も表示されなくなる不具合を修正
 * FIX: 英語版のメッセージのtypoを修正 (thx @TheQuinbox!)
 * FIX: スリープからの復帰後に発言一覧の自動更新が停止する場合がある不具合を修正
 * FIX: システムの日時を変更すると発言一覧の更新間隔が正しく計算されない場合がある不具合を修正

==== Ver 2.4.3(2019/12/06)