@@ -1,6 +1,8 @@
 ﻿更新履歴
 
 ==== Ver 2.5.1-dev(2022/xx/xx)
+ * NEW: Recentタブの発言の取得に Twitter API v2 を使用
+   - 従来の API v1.1 と比べて、15分間に取得できる回数の制限が15→180回に緩和されます
  * NEW: RTしたユーザーのプロフィール・タイムラインを表示する機能をメニューに追加 (thx @kzlogos!)
  * NEW: 発言詳細欄の名前やアイコンのクリックによるプロフィール表示に対応
  * NEW: クリップボード経由での複数枚の画像ファイル添付に対応
